# nrf52-keyboard

./: .dockerignore  .gitignore  .gitmodules  .travis.yml  Dockerfile  Makefile  README.md  license.md
.github/workflows/: Build.yml  CI.yml  Release.yml
KeymapDownloader/: KeymapDownloader.sln
KeymapDownloader/KeymapDownloader/: App.xaml  App.xaml.cs  CustomHID.cs  KeymapDownloader.csproj  MainWindow.xaml  MainWindow.xaml.cs  packages.config
KeymapDownloader/KeymapDownloader/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Settings.Designer.cs
application/bootloader/: dfu_public_key.c  main.c  sdk_config.h
application/bootloader/project/: Makefile  nrf52810.mk  nrf52832.mk
application/main/project/: Makefile  app.mk  app_nrf52810.mk  app_nrf52832.mk  bl.mk  driver.mk  kbd.mk  nrf52810.mk  nrf52810_s112.ld  nrf52832.mk  nrf52832_s132.ld  private.key  tmk.mk
application/main/src/: events.h  fn_define.h  main.c  main.h
doc/: communicate.md  driver.md  hook.md  porting.md
docker/: post.sh  pre.sh
keyboard/: Makefile
keyboard/BenqA800/: Makefile  README.md  config.h  keymap_common.h  keymap_plain.c
keyboard/Omega45/: Makefile  README.md  config.h  rules.mk
keyboard/Omega45/c/: README.md  actionmap_common.h  config.h  keymap_common.h  keymap_plain.c  rules.mk
keyboard/Omega45/d/: README.md  actionmap_plain.c  config.h  rules.mk
keyboard/Omega50/: Makefile  README.md  config.h  keymap_common.h  keymap_plain.c
keyboard/Omega64/: README.md  config.h  keymap_common.h  keymap_plain.c  rules.mk
keyboard/Omega84/: config.h  keymap_common.h  keymap_plain.c  rules.mk
keyboard/alicego/: Makefile  README.md  config.h  keymap_common.h  keymap_plain.c
keyboard/amx_2hkb60/: Makefile  config.h  keymap_common.h  keymap_plain.c
keyboard/amx_amx40/: Makefile  config.h  keymap_common.h  keymap_plain.c  user_evt.c
keyboard/amx_amx60/: Makefile  README.md  config.h  keymap_common.h  keymap_plain.c
keyboard/amx_guqin68/: config.h  keymap_common.h  keymap_plain.c
keyboard/amx_guqin96/: Makefile  config.h  keymap_common.h  keymap_plain.c
keyboard/amx_gx64/: Makefile  config.h  keymap_common.h  keymap_plain.c
keyboard/amx_ibm66/: config.h  keymap_common.h  keymap_plain.c
keyboard/ergoconn/: Makefile  README.md  config.h  keymap_common.h  keymap_plain.c
keyboard/farad69/: Makefile  config.h  keymap_common.h  keymap_plain.c
keyboard/farad69-b/: README.md  keymap_common.h  keymap_plain.c
keyboard/g84-4100/: Makefile  README.md  config.h  keymap_common.h  keymap_plain.c
keyboard/gt-ble60/: Makefile  README.md  config.h  keymap_common.h  rules.mk  sdk_config.h  user_evt.c
keyboard/gt-ble60-e/: README.md  config.h  keymap_common.h  rules.mk
keyboard/gt-pad/: Makefile
keyboard/gt-planck/: Makefile
keyboard/lkb-core/: Makefile  README.md  config.h  custom.c  keymap_common.h  keymap_plain.c
keyboard/lot60-ble/: Makefile  README.md  config.h  keymap_common.h  led_rgb.c  led_rgb.h  make_all.sh  rules.mk  user_evt.c
keyboard/magnet/: Makefile  README.md  config.h  keymap_common.h  keymap_plain.c  matrix_analog.c  rules.mk
keyboard/newhope64/: Makefile  README.md  config.h  keymap_common.h  keymap_plain.c  rules.mk
keyboard/template/: Makefile  config.h  keymap_plain.c  rules.cmake
keyboard/test/: README.md  config.h  keymap_common.h  keymap_plain.c  rules.mk  user_evt.c
keyboard/Ω45/: Makefile  README.md  config.h  keymap_common.h
src/: CMakeLists.txt  app.cmake  chips.cmake  tmk.cmake  version.cmake
src/chips/: nrf52.cmake
src/chips/nrf52/: arm-none-eabi.cmake  nrf52810.cmake  nrf52810_s112.ld  nrf52832.cmake  nrf52832_s132.ld
template/: Makefile.common  README.txt
usb/: .gitignore  CH554_SDCC.H  CH554_SDCC.h  CMakeLists.txt  DAP.c  DAP.h  DAP_config.h  DAP_hid.c  DAP_hid.h  DAP_queue.c  DAP_queue.h  Makefile  SW_DP.c  app_timer.c  app_timer.h  compiler.h  dap_strings.h  descriptor.c  descriptor.h  endpoints.c  endpoints.h  interrupt.c  interrupt.h  main.c  sdcc.cmake  system.c  system.h  uart.c  uart.h  usb.mk  usb_comm.h  usb_descriptor.h
usb/project/: CH554.cbp  CH554.project  CH554.workspace
(+267 files in other folders)
